Complete fixing for render